feat: finished today's work

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.22.2",
     "graphql-request": "^6.1.0",
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
