--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.4",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.22.2",
     "graphql-request": "^6.1.0",
